# 4-way-set-associative-cache-simulator

./: .gitignore  CMakeLists.txt
files/: b.txt  log.csv
include/: app.h
include/cpu/: CPU.h
include/memory/cache/: Cache.h  Line.h  Set.h
include/memory/dram/: DRAM.h
include/memory/type/: Element.h  ElementType.h
include/utils/: AddressFieldsDecomposer.h  Constants.h  FileManager.h  Generator.h  Logger.h
src/: Cache.cpp  Cache.h  DRAM.h  Decoder.cpp  Decoder.h  Element.cpp  Element.h  ElementType.h  Line.cpp  Line.h  Set.cpp  Set.h  Settings.h  app.cpp  graphic.py  main.cpp
src/cpu/: CPU.cpp
src/decoder/: AddressDecoder.cpp  AddressDecoder.h
src/memory/cache/: Cache.cpp  Line.cpp  Set.cpp
src/memory/dram/: DRAM.cpp
src/memory/type/: Element.cpp
src/stats/: Logger.cpp  Logger.h
src/system/cache/: CacheController.h  Controller.cpp  Controller.h
src/system/cache/logic/: Cache.cpp  Cache.h
src/system/cache/logic/line/: Line.cpp  Line.h
src/system/cache/logic/set/: Set.cpp  Set.h
src/system/memory/: DRAM.cpp  DRAM.h
src/system/shared/: Element.cpp  Element.h
src/utils/: AddressFieldsDecomposer.cpp  Constants.cpp  FileManager.cpp  Generator.cpp  Logger.cpp
test/: in.txt
